Freedom Sanbox Ant Deploy/src/objects/Profiler_Card_Detail__c.object
<CustomObject>
    <description>To store details of each question and answer in profile question for each account</description>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profiler_Score_Card__c</fullName>
        <label>Profiler Score Card</label>
        <referenceTo>Profiler_Score_Card__c</referenceTo>
        <relationshipLabel>Profiler Card Details</relationshipLabel>
        <relationshipName>Profiler_Card_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Bank_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank List</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Profiler Card Details</relationshipLabel>
        <relationshipName>Profiler_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Option_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Option List</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipLabel>Profiler Card Details</relationshipLabel>
        <relationshipName>Profiler_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Profiler Card Detail</label>
    <nameField>
        <label>Profiler Card Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiler Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>